<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PicSpot</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imgdesc">imgdesc</string>

    <string-array name="titles">
        <item>Karte</item>
        <item>Spots</item>
        <item>Profil</item>
        <item>Logout</item>
    </string-array>

    <array name="icons">
        <item>@drawable/map</item>
        <item>@drawable/marker</item>
        <item>@drawable/profile</item>
        <item>@drawable/logout</item>
    </array>
    
   <color name="blue">#8cc43f</color>
   <color name="grey">#F6F3F6</color>
   <color name="black">#333333</color>
   <color name="white">#e7e7e8</color>
   <color name="darkgrey">#dddddd</color>
   
   <string name="username">Benutzername:</string>
   <string name="password">Passwort:</string>
   <string name="Login">Anmelden</string>
   
   <string name="firstname">Vorname:</string>
   <string name="lastname">Nachname:</string>
   <string name="email">E-Mail:</string>
   <string name="pass">Passwort:</string>
   <string name="passrep">Wiederholen:</string>
   <string name="usernamemenu">Benutzername</string>
   
   <string name="btnprofile">Benutzerdaten ändern</string>
   
   <string name="btnSpotDetailSave">Speichern</string>
   <string name="btnSpotDetailImages">Bilder anzeigen</string>
   <string name="btnSpotDetailShow">Anzeigen</string>
   <string name="btnSpotDetailPlaceholderSpotname">Spotname</string>
   <string name="btnSpotDetailCamera">Bild aufnehmen</string>
   
   <string name="errorSpotListEmtpy">Sie haben noch keinen Spot angelegt!</string>
   
   <string name="register">Registrieren</string>
   
   <string name="btnRegistr">Registieren</string>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
</resources>
