<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:clickable="true" 
    android:background="@color/white"
    
    >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    >
		
	     <TextView
	      android:id="@+id/tvRegister"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignParentTop="true"
	      android:layout_marginTop="18dp"
	      android:text="@string/register"
	      android:textAppearance="?android:attr/textAppearanceLarge" />
	     
	    <TextView
	        android:id="@+id/tvUsername"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tvRegister"
	        android:layout_marginTop="42dp"
	        android:text="@string/username"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textSize="16sp" />
	
	    <EditText
	        android:id="@+id/eTUsername"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/tvUsername"
	        android:layout_marginLeft="24dp"
	        android:layout_toRightOf="@+id/tvUsername"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText> 
	     
	    
	    <TextView
	        android:id="@+id/tvFirstname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/tvUsername"
	        android:layout_marginTop="26dp"
	        android:text="@string/firstname"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/eTFirstname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/tvFirstname"
	        android:layout_alignLeft="@+id/eTUsername"
	        android:ems="10" >
	
	    </EditText>
	    
	    
	    <TextView
	        android:id="@+id/tvLastname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="26dp"
	        android:layout_alignLeft="@+id/tvFirstname"
	        android:layout_below="@+id/tvFirstname"
	        android:text="@string/lastname"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/eTLastname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/tvLastname"
	        android:layout_alignLeft="@+id/eTEmail"
	        android:ems="10" >
	
	    </EditText>
	
	    
	    <TextView
	        android:id="@+id/tvEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="26dp"
	        android:layout_alignLeft="@+id/tvLastname"
	        android:layout_below="@+id/tvLastname"
	        android:text="@string/email"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/eTEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/tvEmail"
	        android:layout_alignLeft="@+id/eTPass"
	        android:ems="10" >
	
	    </EditText>
	    
	    
	    <TextView
	        android:id="@+id/tvPass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="26dp"
	        android:layout_alignLeft="@+id/tvEmail"
	        android:layout_below="@+id/tvEmail"
	        android:text="@string/pass"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/eTPass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/tvPass"
	        android:layout_alignLeft="@+id/eTPassrep"
	        android:ems="10"
	        android:inputType="textPassword" >
	
	    </EditText>
	    
	    
	    <TextView
	        android:id="@+id/tvPassrep"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="26dp"
	        android:layout_alignLeft="@+id/tvPass"
	        android:layout_below="@+id/tvPass"
	        android:text="@string/passrep"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/eTPassrep"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/tvPassrep"
	        android:layout_alignLeft="@+id/eTUsername"
	        android:ems="10"
	        android:inputType="textPassword" >
	 
	    </EditText>
	
	    <Button
	        android:id="@+id/btnRegister"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/tvPassrep"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="26dp"
	        android:text="@string/btnRegistr" />
	    
	</RelativeLayout>
</ScrollView>